@@ -137,10 +137,6 @@
       <artifactId>metrics-logback</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.addthis.metrics</groupId>
-      <artifactId>reporter-config3</artifactId>
-    </dependency>
-    <dependency>
       <groupId>com.clearspring.analytics</groupId>
       <artifactId>stream</artifactId>
     </dependency>
